--- a/Eduke/eduke/main/templates/parents/parent_chat.html
+++ b/Eduke/eduke/main/templates/parents/parent_chat.html
@@ -111,12 +111,8 @@
         
         <!-- Dashboard Content -->
         <div id="content-wrapper" class="p-6 space-y-6 w-full">
-
-          <div class="bg-white p-4 rounded-lg shadow-md h-[750px] overflow-y-auto" id="scrollbar-off">
-              <h2 class="text-2xl font-bold text-[#4f0074] ml-3 mb-5">
-                  <i class="fa-solid fa-comments"></i> Eduke Chat
-              </h2>
-
+          <h2 class="text-2xl text-gray-800 uppercase font-bold">💬 Eduke Chat</h2>
+          <div class="bg-white p-4 rounded-lg shadow-md overflow-y-auto" id="scrollbar-off">
               <h3 class="text-[20px] font-semibold mb-3 ml-3">Recent Chats</h3>
 
               <ul id="chat-list" class="space-y-3">
@@ -141,6 +137,8 @@
                               </div>
                           </a>
                       </li>
+                  {% empty %}
+                    <p class="text-muted text-center bg-gray-100 p-10">No recent chats!</p>
                   {% endfor %}
               </ul>
 
@@ -163,7 +161,7 @@
                         </a>
                     </li>
                 {% empty %}
-                    <p class="text-center text-gray-400">No suggested users available.</p>
+                    <p class="text-muted text-center bg-gray-100 p-10">No suggested users available.</p>
                 {% endfor %}
               </ul>
           </div>
