--- a/Eduke/eduke/main/templates/parents/parent_eduke_bot.html
+++ b/Eduke/eduke/main/templates/parents/parent_eduke_bot.html
@@ -88,7 +88,7 @@
                 </a>
               </li>
               <li>
-                <a href="#" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                <a href="{% url 'parent_chat' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-comments"></i> &nbsp;
                   Eduke Chat
                 </a>
