--- a/Eduke/eduke/main/templates/subject_head/subject_head_chat.html
+++ b/Eduke/eduke/main/templates/subject_head/subject_head_chat.html
@@ -105,11 +105,8 @@
         
         <!-- Dashboard Content -->
         <div id="content-wrapper" class="p-6 space-y-6 w-full">
+          <h2 class="text-2xl text-gray-800 uppercase font-bold">💬 Eduke Chat</h2>
             <div class="bg-white p-4 rounded-lg shadow-md w-full h-[750px] overflow-y-auto" id="scrollbar-off">
-                <h2 class="text-2xl font-bold text-[#4f0074] ml-3 mb-5">
-                    <i class="fa-solid fa-comments"></i> Eduke Chat
-                </h2>
-
                 <h3 class="text-[20px] font-semibold mb-3 ml-3">Recent Chats</h3>
 
                 <ul id="chat-list" class="space-y-3">
@@ -179,7 +176,7 @@
                         {% endfor %}
 
                     {% else %}
-                        <p class="text-muted">No chat history available.</p>
+                        <p class="text-muted text-center bg-gray-100 p-10">No recent chats!</p>
                     {% endif %}
                 </ul>
 
@@ -202,6 +199,9 @@
                         </a>
                         </li>
                         {% endif %}
+                        
+                    {% empty %}
+                      <p class="text-muted text-center bg-gray-100 p-10">No suggested users available.</p>
                     {% endfor %}
                 </ul>
 
@@ -222,6 +222,8 @@
                         </a>
                         </li>
                         {% endif %}
+                    {% empty %}
+                      <p class="text-muted text-center bg-gray-100 p-10">No suggested users available.</p>
                     {% endfor %}
                 </ul>
 
@@ -242,6 +244,8 @@
                         </a>
                         </li>
                         {% endif %}
+                    {% empty %}
+                      <p class="text-muted text-center bg-gray-100 p-10">No suggested users available.</p>
                     {% endfor %}
                 </ul>
 
@@ -262,6 +266,8 @@
                         </a>
                         </li>
                         {% endif %}
+                    {% empty %}
+                      <p class="text-muted text-center bg-gray-100 p-10">No suggested users available.</p>
                     {% endfor %}
                 </ul>
 
