--- a/Eduke/eduke/main/templates/subject_head/subject_head_login.html
+++ b/Eduke/eduke/main/templates/subject_head/subject_head_login.html
@@ -22,19 +22,16 @@
         </div>
 
 
-        <!-- Form section -->
         <div class="grow w-full md:flex md:w-1/2 md:flex-col md:items-center md:justify-center md:py-20 sm:px-6 px-4">
-            <div class="w-full px-4 text-center text-xs lg:w-3/4">
-                <h1 class="mb-8 text-2xl font-bold text-[#4f0074]">Subject Head Login</h1>
-                <p class="mb-6 text-[#190041]">Continue to explore our amazing features.</p>
+            
+            <div class="bg-white p-10 rounded-xl shadow-[4px_4px_30px_rgba(0,0,0,0.3)] w-full max-w-md">
+                <h2 class="text-2xl font-bold text-center mb-4 text-[#4f0074]">Subject Head Login</h2>
+                <p class="text-sm text-gray-600 text-center mb-6">Continue to explore our amazing features.</p>
 
-                <form class="flex flex-col gap-6" method="POST" novalidate>
+                <form method="POST" novalidate>
                     {% csrf_token %}
-
-                    <div class="relative">
-                        <label class="block text-left text-[13px] font-medium text-[#190041] mb-2" for="email">
-                            Email Address
-                        </label>
+                    <div class="mb-4">
+                        <label for="email" class="block text-sm font-medium text-gray-700 mb-2">Email</label>
                         {{ form.email }}
                         {% if form.email.errors %}
                             <ul class="text-red-500 text-xs">
@@ -45,42 +42,38 @@
                         {% endif %}
                     </div>
 
-                    <div class="relative">
-                        <label class="block text-left text-[13px] font-medium text-[#190041] mb-2" for="password">
-                            Password
-                        </label>
-                        <div class="relative">
-                            {{ form.password }}
-                            {% if form.password.errors %}
-                                <ul class="text-red-500 text-xs">
-                                    {% for error in form.password.errors %}
-                                        <li>{{ error }}</li>
-                                    {% endfor %}
-                                </ul>
-                            {% endif %}
-                        </div>
+                    <div class="mb-1">
+                        <label for="password" class="block text-sm font-medium text-gray-700 mb-2">Password</label>
+                        {{ form.password }}
+                        {% if form.password.errors %}
+                            <ul class="text-red-500 text-xs">
+                                {% for error in form.password.errors %}
+                                    <li>{{ error }}</li>
+                                {% endfor %}
+                            </ul>
+                        {% endif %}
                     </div>
+                    <a href="#" class="text-sm text-[#4f0074] hover:underline mb-4 block text-right">Forgot Password?</a>
 
-                    <button class="lqd-btn group inline-flex items-center justify-center gap-1.5 font-medium rounded-lg transition-all hover:-translate-y-0.5 hover:shadow-xl lqd-btn-primary bg-[#4f0074] text-white hover:bg-[#670098] px-5 py-3" id="LoginFormButton" type="submit">
-                        Sign In
-                    </button>
+                    <button type="submit" class="w-full bg-[#4f0074] text-white px-3 py-2 rounded-md hover:bg-[#670098] transition-colors">Sign In</button>
                 </form>
 
-                <div class="mt-4">
-                    <a href="/" class="inline-block px-6 py-2 hover:underline text-[#190041]">
-                        Go to Home
-                    </a>
+                <div class="flex justify-between mt-5">                    
+                    <p class="text-sm"><a href="/" class="text-[#4f0074] hover:underline">Back to Home</a></p>
                 </div>
 
                 {% if messages %}
-                    <ul>
-                        {% for message in messages %}
-                            <li class="{{ message.tags }}">{{ message }}</li>
-                        {% endfor %}
-                    </ul>
+                    {% for message in messages %}
+                        <p class="text-sm text-center mx-auto mt-5
+                        {% if 'sh_login_error' in message.tags %} text-red-600
+                            {% elif 'sh_no_email' in message.tags %} text-orange-600 
+                            {% endif %}">
+                        {{ message }}
+                    </p>
+                    {% endfor %}
                 {% endif %}
-
             </div>
+
         </div>
     </div>
     
